# cheatsheet-gen-experiment

./: Cargo.toml
data/: first_slide.md  fourth_slide.md  second_slide.md  third_slide.md
data/templates/: index.html  main.tex  main.typ
data/templates/css/: main.css
src/: html.rs  latex.rs  main.rs  typst.rs  typst_to_pdf.rs
