[package]
name = "test-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
comemo = "0.4.0"
fs_extra = "1.3.0"
glob = "0.3.1"
markdown = "=1.0.0-alpha.20"
pathdiff = "0.2.1"
pdf-writer = "0.11.0"
pulldown-cmark = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tera = "1.20.0"
