[package]
name = "test-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
comemo = "0.4.0"
comrak = "0.28.0"
fs_extra = "1.3.0"
glob = "0.3.1"
itertools = "0.13.0"
markdown = "=1.0.0-alpha.20"
mitex = "0.2.4"
pathdiff = "0.2.1"
pdf-writer = "0.11.0"
pulldown-cmark = { version = "0.12.1", features = ["serde"] }
pulldown-cmark-escape = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
tera = "1.20.0"
typst = { git = "https://github.com/typst/typst.git", rev = "60f9f66" }
typst-pdf = { git = "https://github.com/typst/typst.git", rev = "60f9f66" }
typst-kit = { git = "https://github.com/typst/typst.git", rev = "60f9f66", features = ["embed-fonts"] }
